feat: allow going back on UI steps within flows
