# runtime/apis/flowsapi/flow_handler.go
@@ -122,6 +122,24 @@ func FlowHandler(s *proto.Schema) common.HandlerFunc {
 				return common.NewJsonResponse(http.StatusOK, run, nil)
 			}
 
+			if pathParts[2] == "back" {
+				// Undo latest step: POST flows/json/[flowName]/[runID]/back
+				if r.Method != http.MethodPost {
+					return httpjson.NewErrorResponse(ctx, common.NewHttpMethodNotAllowedError("only HTTP POST accepted"), nil)
+				}
+
+				run, err := flows.BackFlowRun(ctx, pathParts[1])
+				if err != nil {
+					return httpjson.NewErrorResponse(ctx, err, nil)
+				}
+
+				if run == nil {
+					return httpjson.NewErrorResponse(ctx, common.NewNotFoundError("Not found"), nil)
+				}
+
+				return common.NewJsonResponse(http.StatusOK, run, nil)
+			}
+
 			// Send step updates: PUT flows/json/[flowName]/[runID]/[stepID]?[action=xxxx]
 			if r.Method != http.MethodPut {
 				return httpjson.NewErrorResponse(ctx, common.NewHttpMethodNotAllowedError("only HTTP PUT accepted"), nil)
